--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -27,20 +27,26 @@
     </nav>
 
     <!-- Main Content -->
-    <div id="main">
-   
+    <div id="main" class="parallax" style="background-image: url(<%= asset_path('menu_bg.jpg')%>);">
+
             <div class="row">
                 <article class="eat-drink" id="drink">
-                    <h1>Drink</h1>
-                    <h3>more stuff!</h3>
+                    
+					<a class="button special"> Drinks Menu</a>
+
                 </article>
 
+				<article class="eat-drink" id="cocktails">
+					
+					<a class="button special">Cocktail List</a>
+				</article>
+
                 <article class="eat-drink" id="eat">
-                    <h1>Eat</h1>
-                    <h3>Even more stuff!</h3>
+                    
+					<a class="button special">Food Menu</a>
                 </article>
             </div>
-        
+
     </div>
     <!-- Footer -->
 					<footer id="footer">
